<resources>
    <string name="app_name">Story Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="onbText">Read books of different categories in our application and develop your horizons</string>
    <string name="favourites">Favourites</string>
    <string name="book_title">Book Title</string>
    <string name="description">description</string>
    <string name="sample">Sample…</string>
    <string name="popular">Popular</string>
    <string name="recommended">Recommended</string>
    <string name="team_s_choice">Team\'s Choice</string>
    <string name="all">All</string>
    <string name="settings">Settings</string>
    <string name="cappucino">Cappuccino</string>
    <string name="snowy_day">Snowy Day</string>
    <string name="select_theme">Select Theme:</string>
    <string name="pitch">Pitch</string>
</resources>