<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bookCoverIV"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:scaleType="centerCrop"
            android:src="@drawable/spideman"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp">
        <TextView
            android:id="@+id/bookTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textFontWeight="800"
            android:text="@string/book_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bookThemesRV"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/bookTitleTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="16dp"
                android:background="#C4C4C4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bookThemesRV" />

            <ScrollView
                android:layout_marginVertical="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/readBookBtn"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider"
                tools:layout_editor_absoluteX="16dp">
                <TextView
                    android:id="@+id/bookDescTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    />
            </ScrollView>


            <Button
                android:id="@+id/readBookBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addToFavBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/save_blank"
            app:layout_constraintEnd_toStartOf="@+id/optionsBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/optionsBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/option"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>